# extractify

./: .gitignore  README.md
.github/: dependabot.yml
_assets/app-videos/: en-us-script.md  (+1 more)
backend/: .gitignore  README.md  config.py  features_flags.json  features_flags.py  g_doc_ai_response_sample.json  main.py  pyproject.toml  requirements.txt  vercel.json
backend/_references/: v2.md
backend/_tests/handle_g_ai_response/: g_doc_ai_response_sample.json  test.py  test2.py
backend/_tests/tesseract/: main.py
backend/_types/: DetectedLanguage.py
backend/app/constants/: errors_texts.py
backend/app/db/: __init__.py  setup_db.py
backend/app/db/default_data/: __init__.py  file_mimetype.py
backend/app/db/models/: __init__.py  _sqlmodel.py  file_models.py  user_model.py
backend/app/db/models/file_models/: __init__.py  file_group_model.py  file_mimetype_model.py  file_model.py  file_ocr_extraction_model.py  file_set_model.py
backend/app/db/utils/: __init__.py  is_table_empty.py  sqlmodel_create.py  sqlmodel_update.py
backend/app/dependencies/: __init__.py  db.py
backend/app/routes/auth/: __init__.py  get_current_user_route.py  signin_route.py  signup_route.py
backend/app/routes/files/: __init__.py  create_ocr_extraction_route.py  delete_route.py  extract_route.py  get_file_route.py  get_files_route.py  upload_route.py
backend/app/routes/files/file_set/: create_file_set_route.py  get_file_set_route.py
backend/app/routes/files/files/: create_file_route.py  get_file_route.py  get_files_route.py
backend/app/routes/files/files_sets/: create_file_set_route.py  delete_file_set_route.py  get_files_set_route.py  get_files_sets_route.py
backend/app/routes/files/ocr_extractions/: create_ocr_extraction_route.py  extract_data_route.py  get_ocr_extraction_route.py
backend/app/routes/v1/auth/: __init__.py  get_current_user_route.py  reset_pwd.py  signin_route.py  signup_route.py
backend/app/routes/v1/files/: __init__.py
backend/app/routes/v1/files/files/: create_file_route.py  get_file_route.py  get_files_route.py
backend/app/routes/v1/files/files_sets/: create_file_set_route.py  delete_file_set_route.py  export_report.py  get_files_set_route.py  get_files_sets_route.py  update_file_set_route.py
backend/app/routes/v1/files/ocr_extractions/: create_ocr_extraction_route.py  extract_data_route.py  get_ocr_extraction_route.py
backend/app/routes/v1/stats/: __init__.py  get_files_set_stats_route.py  get_ocr_extraction_stats_route.py  get_stats_route.py  get_stats_routes.py
backend/app/routes/v1/storage/: __init__.py  create_blob.py  get_blob.py
backend/app/routes/v1/users/: __init__.py  delete_user.py  get_users.py
backend/app/samples/: sample_analysis.json
backend/app/schemas/: __init__.py  file_schemas.py  file_set_schemas.py  ocr_extraction_schemas.py  stats_schemas.py
backend/app/storage/: 8676ca15-f1b9-487f-aec3-a43a2d5408e8  c94c4830-0551-4f3a-8380-24f943f5b70b
backend/app/utils/auth/: __init__.py
backend/app/utils/documentai/: analyze.py  creds.py
backend/app/utils/firebase/: __init__.py  download_firebase_file.py  upload.py
backend/app/utils/google_auth/: production_auth.py  vercel_production_auth.py
backend/app/utils/middlewares/: __init__.py
backend/app/utils/storage/: __init__.py  setup_firebase.py  upload.py
backend/constants/: errors_texts.py
backend/db/: __init__.py  setup_db.py
backend/db/default_data/: __init__.py  file_mimetype.py
backend/db/models/: File.py  User.py  __init__.py  file_models.py  user_model.py
backend/db/utils/: __init__.py
backend/extractify.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/references/: v2.md
backend/routes/auth/: __init__.py  get_current_user.py  get_current_user_route.py  signin.py  signin_route.py  signup.py  signup_route.py
backend/routes/files/: __init__.py  extract_route.py  get_file_route.py  get_files_route.py  get_routes.py  upload_route.py  upload_routes.py
backend/schemas/: __init__.py
backend/utils/auth/: __init__.py
backend/utils/documentai/: analyze.py
backend/utils/firebase/: __init__.py  download.py  setup_firebase.py  upload.py
backend/utils/security/: __init__.py
frontend/: README.md  index.html  package.json  tailwind.config.ts
todos/: v2.md
vm/: nginx.sh
(+118 files in other folders)
